Fix alignment submenu

--- a/_sass/2-sections/_header-nav.sass
+++ b/_sass/2-sections/_header-nav.sass
@@ -50,7 +50,7 @@ nav
     width: auto
     min-width: 110px
     padding: 0 35px
-    margin-left: -95px
+    margin-left: -94.75px
     text-align: right
 
   ul li a:hover + .hidden, .hidden:hover
